--- a/specview/src/main/javascript/specview/specview/controller/color.html
+++ b/specview/src/main/javascript/specview/specview/controller/color.html
@@ -6,6 +6,7 @@
 <script src="../../specviewTest/data/cmlfile.js"></script>
 
 <head>
+
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Display spectrum demo</title>
 	<link rel="stylesheet" href="../../css/specview.css" />
@@ -22,6 +23,7 @@
 	<link rel="shortcut icon" href="http://c453312.r12.cf2.rackcdn.com/favicon_001.ico" />
 
 	<script type="text/javascript">
+	alert(document.URL)
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-814714-1']);
   _gaq.push(['_trackPageview']);
