--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -373,7 +373,7 @@ count = 0;
       	<option>red</option>
       	<option>black</option>
       	<option>brown</option>
-	</select><br>
+	</select> <input class = "button" type = "button" name = "chk1" onclick = "newPage('./color.html')" value = "More color?"> <br>
 	-Bonds
    <select  id = "bondHighlightColor" size="1">
   	    <option>orange</option>
@@ -381,7 +381,7 @@ count = 0;
       	<option>red</option>
       	<option>black</option>
       	<option>brown</option>
-	</select><br>
+	</select> <input class = "button" type = "button" name = "chk1" onclick = "newPage('./color.html')" value = "More color?"><br>
 	-Peaks
    <select  id = "peakHighlightColor" size="1">
   	    <option>orange</option>
@@ -389,7 +389,7 @@ count = 0;
       	<option>red</option>
       	<option>black</option>
       	<option>brown</option>
-	</select>
+	</select> <input class = "button" type = "button" name = "chk1" onclick = "newPage('./color.html')" value = "More color?">
 	 </div>
 	 
 	   
