--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -702,6 +702,27 @@ Hide the window
 </div>
 
 
+<!-- ####################################BOX THAT APPEARS WHEN WE SELECT MULTIPLE ATOMS OR BONDS TO IDENTIFY THE PEAKS -->
+<div class="floatingBoxSelectMultiplePeaks"
+	 id="floatingBoxSelectMultiplePeaks" 
+	 style="display:none; 
+	 position:absolute; 
+     border-style: double;
+     background-color: #DEA12F;
+     opacity: 600;
+     padding: 1px;">
+     
+     
+     <a href="javascript:specview.controller.plugins.Highlight.highlightSerieOfPeaks(document.editorObject)"onmouseover="specview.controller.plugins.Highlight.highlightSerieOfPeaks(document.editorObject);">Identify the peaks of the atoms you selected</a>
+     <br>
+     <br>
+     <br>
+     <a 
+ onmouseover="document.HideContent('floatingBoxSelectMultiplePeaks'); return true;"
+ href="javascript:HideContent('floatingBoxColor')">
+Hide the window
+</a>
+     </div>
 
 </body>
 </html>
