--- a/specview/src/main/javascript/specview/specview/controller/demo3.html
+++ b/specview/src/main/javascript/specview/specview/controller/demo3.html
@@ -379,15 +379,14 @@ Hide the window
 <input class = "button" type = "button" name = "chk1" onclick = "resetMolecule()" value = "Reset Molecule">
 <input class = "button" type = "button" name = "chk1" onclick = "resetSpectrum()" value = "Reset Spectrum">
 <input class = "button" type = "button" name = "chk1" onclick = "newPage('http://www.yourPopUppage.com')" value = "Move molecule? KO">
-<input id="cmlInputFile" type = "file" name = "chk1" onchange = "javascript:getCMLString()" >
+<input class = "button" id="cmlInputFile" type = "button" name = "chk1" onclick = "javascript:getCMLString()" value="test" >
 
 
 
 <script type = "text/javascript">
 
 function getCMLString(){
-	var path = document.getElementById("cmlInputFile").value;
-	alert(document.HelloWorld.printMessage(path));
+	alert(document.javaApplet.parse("/home/epu/test1_frag.cml.1.xml"));
 }
 
 var count = 0;
@@ -781,9 +780,14 @@ Hide the window
      <br>
      <br>
      </div>
+<H1>A Java applet example</H1>
+<P>Here it is: <APPLET name="javaApplet" code="CMLparser" archive="example.jar" WIDTH="200" HEIGHT="70">
+This is where HelloWorld.class runs.</APPLET>
 
-<applet  name="HelloWorld" Code="HelloWorld.class" width="300" height="50">
-</applet>
+<param name="text" value="Bonjour les loulous">
+</P>
+
+
 
 </body>
 </html>
